update to json.org code